@@ -13,6 +13,7 @@ trunk
 * implemented ':' operator for MxAlgebra expressions. 1:5 returns the vector [1,2,3,4,5]
 * implemented subranges for '[' operator in MxAlgebra expressions. foo[1:5,] is valid inside algebra.
 * implemented omxMnor, use ?omxMnor for R help on this function
+* added omxGetParameters, omxSetParameters, omxAssignFirstParameters.  Use ? for documentation.
 
 Release 0.2.5-1050
 ==================
